fix: 移除无用 --add-opens，修复 Integer/Double 废弃构造器